DT-2004-11-25-0: Bugfix:    o Backed out DRMAA-J changes to create_settings.sh
                 Changed:   create_settings.sh

MD-2004-11-24-0: Bugfix:    arch script does not know about /lib64
                 Review:    JG
                 Changed:   arch, arch.dist
                 Issue:     1357
                 Bugtraq:   6200013

JG-2004-11-24-0: Bugfix:    sge_qmaster hit stack limit on aix43, aix51 and hp11
                            with classic spooling.
                 Review:    CR

DT-2004-11-24-0: Bugfix:    o Fixed segfault in japi_synchronize()
                 Review:    AH
                 Changed:   JAPI

MD-2004-11-23-0: Enhancm.:  60/60u1 to 60u2 BDB update script
                 Changed:   inst_sge, inst_update, inst_common, set_fileperm.sh
                 Review:    CR

AA-2004-11-23-0: Bugfix:    qmon segv when deleting sharetree Root node more than once
                            - disallow editing of Root node
                            - disallow changing default node label
                 Issue:     1360
                 Bugtraq:   6199261
                 Changed:   qmon
                 Review:    RH
                 
CR-2004-11-23-2: Bugfix:    fixed bug in sge_ca script (GE CSP feature):
                            Generating certificate for users failed
                 Changed:   sge_ca script
                 Review:    AA

JG-2004-11-23-0: Testsuite: Verified tests system_tests/geee/sharetree/check.exp
                            and system_tests/utilbin/loadcheck/check.exp.

CR-2004-11-23-1: Testsuite: test for issue 1096 does not work with csp system

CR-2004-11-23-0: Testsuite: wait 5 seconds after restarting qmaster. It
                            may be a problem for following commands when
                            qmaster is not immediately reachable.

JG-2004-11-22-2: Testsuite: fixed check system_tests/shepherd/submit_del
                 Review:    CR
